working with drop shadow on text

--- a/styles.css
+++ b/styles.css
@@ -66,5 +66,5 @@ body {
     margin: auto;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
-    box-shadow: darkgray;
+    text-shadow: darkgray;
 }
