changed color of pos words

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,6 @@ body {
     font-size: 200%;
     margin: auto;
     font-family: Arial, Helvetica, sans-serif;
-    color: white;
+    color: darkgray;
     text-shadow: steelblue;
 }
